# MCP-PostgreSQL-Ops

./: .env  .env.example  .gitignore  .gitleaks.toml  Dockerfile.MCP-Server  MANIFEST.in  README.md  SECURITY.md  build-mcp-server-docker-image.sh  build-mcpo-server-docker-image.sh  docker-compose.custom-db.yml  docker-compose.yml  mcp-config.json.http  mcp-config.json.stdio  pyproject.toml  pyproject.toml.bak  run-mcp-inspector-local.sh  run-mcp-inspector-pypi.sh  smithery.yaml  test_schema_connectivity.py  test_schema_tools.py
.github/: CONTRIBUTING.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  question.md
.github/workflows/: integration.yml  pypi-publish.yml  test.yml
docs/plans/: 2026-03-09-pg17-pg18-support-design.md  2026-03-09-test-suite-design.md
integration/: README.md  requirements.txt  scenarios.yml
integration/cassettes/: protocol_and_schemas.json
scripts/: create-test-data.sh  create-test-data.sql  enable-pgsql-extensions.sh  mcp-server-docker-cmd.sh  rename-template.sh  run-mcp-inspector-local.sh  run-mcp-inspector-pypi.sh
src/MCP_NAME/: functions.py  mcp_main.py  prompt_template.md
src/mcp_postgresql_ops/: functions.py  mcp_main.py  prompt_template.md  version_compat.py
tests/: conftest.py  test_tools_integration.py  test_version_compat.py
tests/docker/: docker-compose.test.yml  init-test-db.sql
