[project]
name = "mcp-postgresql-ops"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "JungJungIn", email = "call518@gmail.com" }]
dependencies = [
    "fastmcp>=2.12.3",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.7",
    "setuptools-scm>=10.0.5",
    "pre-commit>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
mcp-postgresql-ops = "mcp_postgresql_ops.mcp_main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "pip>=26.0.1",
]
