[project]
name = "mcp-postgresql-ops"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "JungJungIn", email = "call518@gmail.com" }]
dependencies = [
    "fastmcp>=2.12.3",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.7",
    "setuptools-scm>=10.0.5",
    "pre-commit>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]

[project.scripts]
mcp-postgresql-ops = "mcp_postgresql_ops.mcp_main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools_scm]
### version_scheme options:
###   uncommented: raises LookupError (uses fallback_version) when not on a tag
###   commented-out (default guess-next-dev): auto-generates e.g. 1.0.1.dev2+gabcdef for commits after a tag
# version_scheme = "no-guess-dev"
### local_scheme options:
###   node-and-date      (default)  e.g. 1.0.1.dev2+gabcdef.d20260430
###   node-and-timestamp            e.g. 1.0.1.dev2+gabcdef.1746000000
###   dirty-tag                     e.g. 1.0.1.dev2+dirty (only when working tree is dirty)
###   no-local-version              e.g. 1.0.1.dev2 (omits local part entirely; only this option allows non-tagged commits to be uploaded to PyPI)
local_scheme = "node-and-date"
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
